# pyclipper

./: .gitignore  CMakeLists.txt  README.md  build.py  cleanutils.py  clearbuild.py  clearcmake.py  clearcython.py  cloudmesh.py  cmdutils.py  config.cmake  contourViewer.py  info.bat  info.txt  iopaths.py  mergestls.py  mk.bat  py.bat  readpaths.py  setpath.bat  setup.py  slicesViewer.py  stl.py  twoscales.py
examples/: .gitignore  README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  test.stl
pyclipper/: .gitignore  Clipper.pxd  Clipper.pyx  Clipper_defs.pxd  README.md  all.py  minisix.py  plot.py  plot2d.py  plot3d.py
pyslic3r/: .gitignore  Clipper.pxd  Clipper.pyx  README.md  SlicedModel.pxd  SlicedModel.pyx  TriangleMesh.pxd  TriangleMesh.pyx  _Clipper.pxd  _Clipper.pyx  _SlicedModel.pxd  _SlicedModel.pyx  _TriangleMesh.pxd  _TriangleMesh.pyx  __init__.py  _pyslic3r.pyx  all.py  plot.py  plot2d.py  plot3d.py  pyslic3r.pyx  setup.py  slic3r_defs.pxd  slicing.py
